syntax = "proto3";

package Models;
option csharp_namespace = "ForCSharp.Protobuf";

message Result  {
    string item_id = 1;
    int32 item_value = 2;
}

message Response {
	repeated Result results = 1;
}
